--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://i.imgur.com/H1qsYEl.png" 
+    alt="comedic crow gets wholesome support"
+    title="We're here to help you!"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="Male lion yawn looks like its laughing"
+    title="Laughing lion"
+    />
+
+    <img src="https://c.tenor.com/ZhfMGWrmCTcAAAAC/cute-kitty-best-kitty.gif"
+    alt="Cute kitten"
+    title="Cut Kitty"
+    />
+
   </body>
 </html>
